syntax = "proto3";

package yandex.cloud.events.iam;

import "google/protobuf/timestamp.proto";
import "google/rpc/status.proto";
import "yandex/cloud/access/access.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/events/options.proto";
import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/iam;iam";
option java_package = "yandex.cloud.api.events.iam";
option java_outer_classname = "RestrictionTypeEvents";

message RestrictionTypeEventMetadata {
  // Global unique identifier of current event.
  // Should be treated as opaque string.
  // Could be used for deduplication.
  string event_id = 1 [(required) = true];

  // Well-known event type in form of fully qualified protobuf
  // message name (eg: yandex.cloud.events.compute.CreateInstance).
  string event_type = 2 [(required) = true];

  // Wall time of event as seen on producing system.
  google.protobuf.Timestamp created_at = 3 [(required) = true];

  // Additional information about trace tree.
  TracingContext tracing_context = 4 [(hide) = true];
}

message SetRestrictionTypeAccessBindings {
  // NOT a public event
  option (include) = false;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  RestrictionTypeEventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9;

  message EventDetails {
    string restriction_type = 1 [(required) = true];
    repeated access.AccessBindingDelta access_binding_deltas = 2;
  }

  message RequestParameters {
    string restriction_type = 1 [(required) = true];
    repeated access.AccessBinding access_bindings = 2 [(required) = true];
  }

  message Response {
    string operation_id = 1 [(required) = true];
  }
}

message UpdateRestrictionTypeAccessBindings {
  // NOT a public event
  option (include) = false;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  RestrictionTypeEventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  Response response = 9;

  message EventDetails {
    string restriction_type = 1 [(required) = true];
    repeated access.AccessBindingDelta access_binding_deltas = 2;
  }

  message RequestParameters {
    string resource_id = 1 [(required) = true];
    repeated access.AccessBindingDelta access_binding_deltas = 2 [(required) = true];
  }

  message Response {
    string operation_id = 1 [(required) = true];
  }
}
